--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./main.js"></script>
+    <script src="./dist/main.js"></script>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link type="text/css" rel="stylesheet" href="../css/reset.css">
-    <link type="text/css" rel="stylesheet" href="../css/main.css">
-    <link type="text/css" rel="stylesheet" href="../css/game-start.css">
-    <link type="text/css" rel="stylesheet" href="../css/game.css">
-    <link type="text/css" rel="stylesheet" href="../css/explosion.css">
-    <link type="text/css" rel="stylesheet" href="../css/fire.css">
+    <link type="text/css" rel="stylesheet" href="./css/reset.css">
+    <link type="text/css" rel="stylesheet" href="./css/main.css">
+    <link type="text/css" rel="stylesheet" href="./css/game-start.css">
+    <link type="text/css" rel="stylesheet" href="./css/game.css">
+    <link type="text/css" rel="stylesheet" href="./css/explosion.css">
+    <link type="text/css" rel="stylesheet" href="./css/fire.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1576428ae6.js" crossorigin="anonymous"></script>
