--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./dist/main.js"></script>
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./dist/favicon.ico" type="image/x-icon" />
     <link type="text/css" rel="stylesheet" href="./css/reset.css">
     <link type="text/css" rel="stylesheet" href="./css/main.css">
     <link type="text/css" rel="stylesheet" href="./css/game-start.css">
