Set up for deployment

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./main.js"></script>
+    <script src="./dist/main.js"></script>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link type="text/css" rel="stylesheet" href="../css/reset.css">
-    <link type="text/css" rel="stylesheet" href="../css/main.css">
-    <link type="text/css" rel="stylesheet" href="../css/game-start.css">
-    <link type="text/css" rel="stylesheet" href="../css/game.css">
-    <link type="text/css" rel="stylesheet" href="../css/explosion.css">
-    <link type="text/css" rel="stylesheet" href="../css/fire.css">
-    <link type="text/css" rel="stylesheet" href="../css/wick.css">
+    <link type="text/css" rel="stylesheet" href="./css/reset.css">
+    <link type="text/css" rel="stylesheet" href="./css/main.css">
+    <link type="text/css" rel="stylesheet" href="./css/game-start.css">
+    <link type="text/css" rel="stylesheet" href="./css/game.css">
+    <link type="text/css" rel="stylesheet" href="./css/explosion.css">
+    <link type="text/css" rel="stylesheet" href="./css/fire.css">
+    <link type="text/css" rel="stylesheet" href="./css/wick.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1576428ae6.js" crossorigin="anonymous"></script>
@@ -124,18 +124,18 @@
     <audio
         loop
         id="music-player"
-        src="../music/01 Action Fight 1.mp3"
+        src="./music/01 Action Fight 1.mp3"
         >
     </audio>
     <audio 
         loop 
         id="bomb-sound" 
-        src="../music/Explosion+3.mp3">
+        src="./music/Explosion+3.mp3">
     </audio>
     <audio 
         loop 
         id="tada-sound" 
-        src="../music/Tada Sound Effect.mp3">
+        src="./music/Tada Sound Effect.mp3">
     </audio>
 </body>
 </html>
