--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="game-end-btn" id="game-lose-btn"></div>
     </div>
     <div class="main-game-container" >
-        <input type="text" class="mobile-input" id="mobile-input" >
+        <input type="text" class="mobile-input" id="mobile-input" autocomplete="off" >
         <h1 class="main-title" >Bomb Squad</h1>
         <h2 class="level-title">
             <div class="level-number">High Score: </div>
