--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Bomb Squad" />
+    <meta property="og:image" content="./images/main_game_screenshot.png" />
+    <meta property="og:description" content="A bomb-difusing game where a player must crack the code before it's too late." />
+    <meta property="og:url" content="https://joshkohane.github.io/Bomb-Squad/" />
     <script src="./dist/main.js"></script>
     <link rel="icon" href="./dist/favicon.ico" type="image/x-icon" />
     <link type="text/css" rel="stylesheet" href="./css/reset.css">
