--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Bomb Squad" />
-    <meta property="og:image" content="https://campsound-dev.s3-us-west-1.amazonaws.com/dreamers+images/Screen+Shot+2021-01-03+at+10.06.39+PM.png" />
+    <meta property="og:image" content="./images/main_game_screenshot.png" />
     <meta property="og:description"
         content="A bomb-difusing game where a player must crack the code before it's too late." />
     <meta property="og:url" content="https://joshkohane.github.io/Bomb-Squad/" />
